--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header class="header">
-      <h1>Oskies 3D Model Viewer</h1>
+      <h1>Oskie's 3D Model Viewer</h1>
     </header>
     <main class="main">
       <div id="notSupported" class="notSupported">
